RgsParser/RgsGrammar.txt
===============================================================================
BNF
from:   https://msdn.microsoft.com/en-us/library/ttd53fhh.aspx  (MSDN: Understanding Backus Nauer form)
and:    https://msdn.microsoft.com/en-us/library/fa5bz7w4.aspx  (MSDN: Understanding Parse Trees)
===============================================================================
<unit>  ::= <root key>{<registry expression>}+  

<root key> ::= HKEY_CLASSES_ROOT | HKEY_CURRENT_USER |  
    HKEY_LOCAL_MACHINE | HKEY_USERS |  
    HKEY_PERFORMANCE_DATA | HKEY_DYN_DATA |  
    HKEY_CURRENT_CONFIG | HKCR | HKCU |  
    HKLM | HKU | HKPD | HKDD | HKCC  

<registry expression> ::= <Add Key> | <Delete Key>  

<Add Key> ::= [ForceRemove | NoRemove | val]<Key Name>  
 [<Key Value>][{<Add Key>}]  

<Delete Key> ::= Delete<Key Name>  

<Key Name> ::= '<AlphaNumeric>+'  

<AlphaNumeric> ::= any character not NULL, i.e. ASCII 0  

<Key Value> ::= = <Key Type><Key Name>  

<Key Type> ::= s | d  

<Key Value> ::= '<AlphaNumeric>'  



===============================================================================
ANTLR
===============================================================================

compileUnit:  hiveExpr+;

hiveExpr:   rootKey block;

rootKey = 'HKEY_CLASSES_ROOT'     | 'HKCR'
        | 'HKEY_CURRENT_USER'     | 'HKCU'
        | 'HKEY_LOCAL_MACHINE'    | 'HKLM'
        | 'HKEY_USERS'            | 'HKU'
        | 'HKEY_PERFORMANCE_DATA' | 'HKPD'
        | 'HKEY_DYN_DATA'         | 'HKDD'
        | 'HKEY_CURRENT_CONFIG'   | 'HKCC'
        ;

block   :   '{' regExpr* '}'

regExpr : addKey | deleteKey;

addKey  : ('ForceRemove' | 'NoRemove' | 'val')?
          keyName ('=' keyValue)?
          block?
        ;

deleteKey: 'Delete' keyName;

keyName : alphaNumeric+
        | ['] alphaNumeric+ ['];

alphaNumeric: [^\0];

keyValue: keyType? ['] alphaNumeric+ ['];

keyType : 's' | 'd' | 'm' | 'b';
